@@ -21,6 +21,7 @@ package org.grails.datastore.mapping.model;
 import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
 import java.lang.annotation.Annotation;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -355,11 +356,8 @@ public abstract class AbstractPersistentEntity<T extends Entity> implements Pers
 
     public Object newInstance() {
         try {
-            return getJavaClass().newInstance();
-        } catch (InstantiationException e) {
-            throw new EntityCreationException("Unable to create entity of type [" + getJavaClass().getName() +
-                    "]: " + e.getMessage(), e);
-        } catch (IllegalAccessException e) {
+            return getJavaClass().getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | InvocationTargetException | NoSuchMethodException | IllegalAccessException e) {
             throw new EntityCreationException("Unable to create entity of type [" + getJavaClass().getName() +
                     "]: " + e.getMessage(), e);
         }
